@@ -6,6 +6,7 @@ Revision history for Perl extension Test::Simple
     - chromatic provided a fix so can_ok() honors can() overrides.
     - Nick Ing-Simmons suggested todo_skip() be a bit clearer about
       the skipping part.
+    - Making plan() vomit if it gets something it doesn't understand.
 
 0.43  Thu Apr 11 22:55:23 EDT 2002
     - Adrian Howard added TB->maybe_regex()
